Fixed routes. Added logger. Started to implement roles and restrict authorizations.
TODO:
* Fix swagger
* Complete roles issue (update user table, add role to the jwt, handle authorization routes).
* Tests
* Solve stage filter (in mongo-api)
